--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,8 @@
-<h2 id="title">Welcome to Ember</h2>
-
-{{outlet}}
+<div class="container-fluid">
+  <div class="titlebar span12">
+    {{#link-to 'application'}}
+      <img class="logo" src="/images/logo.png"/>
+    {{/link-to}}
+  </div>
+  {{outlet}}
+</div>
