update main link component, add trains icon

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,11 +1,18 @@
-.main {
+#main {
+  max-width: 1000px;
   width: 100%;
-  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .titlebar {
   background: linear-gradient(#87CEEB, #1E90FF);
   margin-bottom: 10px;
+  height: 50px;
+  line-height: 45px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  padding-left: 15px;
 }
 
 .titlebar .logo {
@@ -14,17 +21,20 @@
 }
 
 .page-button {
-  width: 50%;
+  display: table-cell;
+  vertical-align: middle;
   color: white;
   font-weight: bold;
-  background-color: blue;
+  background-color: #3B7BBE;
   text-align: center;
   height: 100px;
   width: 100px;
-  margin: 1rem;
   border-radius: 15px;
-  border: 0.4rem solid yellow;
-  box-sizing: border-box;
+  font-size: 1.1em;
+}
+
+.page-button:hover {
+  background-color: #3FA8E0;
 }
 
 .breadcrumbs {
