--- a/app/templates/components/main-link.hbs
+++ b/app/templates/components/main-link.hbs
@@ -1,3 +1,5 @@
-{{#link-to page}}
+{{#link-to page class='page-button' tagName='div'}}
+  <img src='/images/icons/{{page}}.svg'>
+  <br>
   {{page}}
 {{/link-to}}
